--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "rzd-machinist-portal",
   "version": "1.0.0",
-  "description": "Демо-портал машиниста РЖД",
-  "main": "index.html",
   "dependencies": {
-    "telegraf": "^4.16.3"
-  },
-  "engines": {
-    "node": ">=18"
+    "telegraf": "^4.16.3",
+    "busboy": "^1.6.0"
   }
 }
